@@ -60,6 +60,11 @@
 	define("GRAPH_YAXIS_TYPE_CALCULATED",0);
 	define("GRAPH_YAXIS_TYPE_FIXED",1);
 
+	define("MAP_LABEL_TYPE_HOSTLABEL",0);
+	define("MAP_LABEL_TYPE_IP",1);
+	define("MAP_LABEL_TYPE_HOSTNAME",2);
+	define("MAP_LABEL_TYPE_NOTHING",3);
+
 	define("ITEM_TYPE_ZABBIX",0);
 	define("ITEM_TYPE_SNMPV1",1);
 	define("ITEM_TYPE_TRAPPER",2);
